tests/ui/ser-enum-data.rs
use miniserde::Serialize;

#[derive(Serialize)]
enum Enum {
    Variant(i32)
}

fn main() {}
